--- a/StatusCheck.API/StatusCheck.API/appsettings.json
+++ b/StatusCheck.API/StatusCheck.API/appsettings.json
@@ -1,10 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "AllowedHosts": "*",
+  "Data": {
+    "StatusCheckAPIConnection": {
+      "ConnectionString": "Server=DESKTOP-4E1LRM4;Database=StatusCheckAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
